
        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Fix 'http' and 'https' instrumentation for outgoing requests to not have the
  'http' span context be active in user code. ({pull}2470[#2470])

* Fixes for 'ioredis' instrumentation ({pull}2460[#2460]):
+
**  Fix run-context so that a span created in the same tick as an ioredis
    client command will no longer be a child of the redis span.
**  Capture an APM error and correctly set span.outcome to "failure" when
    a redis client command calls back with an error.
**  Avoid a rare possible double-instrumentation of redis commands
    internally-queued before the RedisClient is "ready". ({issues}2459[#2459])
**  Add destination context so Redis shows up on the Service Map.


[[release-notes-3.25.0]]
==== 3.25.0 2021/11/24

[float]
===== Bug fixes

* Fixes for 'redis' instrumentation:
+
**  Fix run-context so that a span created in the same tick as a redis client
    command will no longer be a child of the redis span. ({issues}2430[#2430])
**  Capture an APM error and correctly set span.outcome to "failure" when
    a redis client command calls back with an error.
**  Avoid a rare possible double-instrumentation of redis commands
    internally-queued before the RedisClient is "ready". ({pull}2446[#2446])

* Avoid setting the `tracestate` header for outgoing HTTP requests to the empty
  string. This can happen for non-trace-root transactions. While the HTTP spec
  allows empty header values, some servers do not. ({issues}2405[#2405])

* Deprecate `transaction.subtype` and `transaction.action`. These fields
  were never used by APM server. This also deprecates the